[FIX] web_editor: align list inside banner correctly
Issue:
======
List inside a banner under a list doesn't align correctly

steps to reproduce the issue:
=============================
- Go to do
- Add a list and first item
- Add a banner
- Add a list inside the banner
- It's not correctly centered

Origin of the issue:
====================
Since the list inside the banner is considered nested list under the top
list, the `margin-bottom` is removed.

Solution:
=========
Reassign the style again when we are inside the banner.

task-3857296

closes odoo/odoo#162204

--- a/addons/web_editor/static/src/scss/web_editor.common.scss
+++ b/addons/web_editor/static/src/scss/web_editor.common.scss
@@ -1059,7 +1059,13 @@ section, .oe_img_bg, [data-oe-shape-data] {
 
 .o_editor_banner {
     // force margin to ensure vertical center alignment in correlation with icon
-    p, h1, h2, h3 {
+    p, h1, h2, h3, ul, ol {
         margin-bottom: 1rem;
+    }
+    ol ol, ul ul, ol ul, ul ol {
+        margin-bottom: 0;
+    }
+    ul.o_checklist>li:not(.oe-nested)::before {
+        top: 0px!important;
     }
 }
